--- a/index.html
+++ b/index.html
@@ -15,6 +15,46 @@
 
 <body>
 
+  <div class="container">
+
+    <header class="header">
+
+      <nav class="nav">
+
+        <div>
+
+          <img src="" alt="">
+
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+
+        </div>
+
+        <div>
+
+          <button type="button" class="login">Log in</button>
+
+          <a href="#">Try it free</a>
+
+        </div>
+
+      </nav>
+
+
+    </header>
+
+
+
+
+
+
+  </div>
+
 </body>
 
 </html>
