--- a/index.html
+++ b/index.html
@@ -19,32 +19,27 @@
 
     <header class="header">
 
-      <nav class="nav">
+        <div class="header__bar">
 
-        <div>
+          <img class="logo" src="images/Frame (4).png" alt="logo" height="28">
 
-          <img src="" alt="">
-
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <ul class="header__menu">
+            <li class="header__menu-item">Product</li>
+            <li class="header__menu-item">Features</li>
+            <li class="header__menu-item">Pricing</li>
+            <li class="header__menu-item">Case studies</li>
+            <li class="header__menu-item">Resources</li>
           </ul>
 
         </div>
 
         <div>
 
-          <button type="button" class="login">Log in</button>
+          <button type="button" class="btn">Log in</button>
 
           <a href="#">Try it free</a>
 
         </div>
-
-      </nav>
-
 
     </header>
 
