header on structure 1.2 done

--- a/index.html
+++ b/index.html
@@ -15,33 +15,35 @@
 
 <body>
 
-  <div class="container">
+  <header class="header">
 
-    <header class="header">
+    <div class="container head">
 
-        <div class="header__bar">
+      <div class="header__bar">
 
-          <img class="logo" src="images/Frame (4).png" alt="logo" height="28">
+        <img class="logo" src="images/Frame (4).png" alt="logo" height="28">
 
-          <ul class="header__menu">
-            <li class="header__menu-item">Product</li>
-            <li class="header__menu-item">Features</li>
-            <li class="header__menu-item">Pricing</li>
-            <li class="header__menu-item">Case studies</li>
-            <li class="header__menu-item">Resources</li>
-          </ul>
+        <ul class="header__menu">
+          <li class="header__menu-item"><a href="#" alt="Product">Product</a></li>
+          <li class="header__menu-item"><a href="#" alt="Features">Features</a></li>
+          <li class="header__menu-item"><a href="#" alt="Pricing">Pricing</a></li>
+          <li class="header__menu-item"><a href="#" alt="Case studies">Case studies</a></li>
+          <li class="header__menu-item"><a href="#" alt="Resources">Resources</a></li>
+        </ul>
 
-        </div>
+      </div>
 
-        <div>
+      <div>
 
-          <button type="button" class="btn">Log in</button>
+        <button type="button" class="btn btn-type1 header-btn1">Log in</button>
 
-          <a href="#">Try it free</a>
+        <button type="button" class="btn btn-type2 header-btn2">Try it free</button>
 
-        </div>
+      </div>
 
-    </header>
+    </div>
+
+  </header>
 
 
 
