section 1 on 1.2 ready

--- a/index.html
+++ b/index.html
@@ -44,13 +44,50 @@
     </div>
 
   </header>
+  <!--------------------------------------------------------------------->
+  <main>
+
+    <div class="container">
+
+      <section class="section1">
+
+        <div class="flash">
+
+          <h1 class="title fs65">Accelerate localization from code to delivery</h1>
+
+          <p class="subtitle">
+            A localization and translation management platform for agile teams. Embrace automation,
+            workflow transparency, and fast project delivery.
+          </p>
+
+          <button type="button" class="btn btn-type2 section1-btn1">Try it free</button>
+
+          <button type="button" class="btn btn-type1 section1-btn2">Book a demo</button>
+
+          <p class="review">Try all features for 14 days · No credit card required</p>
+
+        </div>
+
+      </section>
 
 
 
 
 
 
-  </div>
+
+
+
+
+
+
+    </div>
+
+  </main>
+
+  <footer>
+
+  </footer>
 
 </body>
 
