--- a/index.html
+++ b/index.html
@@ -70,18 +70,51 @@
 
       </section>
 
+    </div>
+<!-------------------------------------------------------------------------->
+    <section class="section2">
 
+      <div class="container">
 
+        <h2 class="section2__title">The preferred localization tool of 1500+ companies</h2>
 
+        <ul class="section2__menu">
+          <li class="section2__item"><a href="#"><img src="./images/spe.png" alt="firm1"></a></li>
+          <li class="section2__item"><a href="#"><img src="./images/virgin.png" alt="firm2"></a></li>
+          <li class="section2__item"><a href="#"><img src="./images/tidal.png" alt="firm3"></a></li>
+          <li class="section2__item"><a href="#"><img src="./images/revolut.png" alt="firm4"></a></li>
+          <li class="section2__item"><a href="#"><img src="./images/yelp.png" alt="firm5"></a></li>
+          <li class="section2__item"><a href="#"><img src="./images/daimer.png" alt="firm6"></a></li>
+        </ul>
 
+      </div>
 
-
-
-
-
-
+    </section>
+<!-------------------------------------------------------------------------->
+   <section class="section3">
+    <div class="container1290">
 
     </div>
+
+
+
+
+
+
+
+   </section>
+
+
+
+
+
+
+
+
+
+
+
+
 
   </main>
 
