section 3 ready. mb250 fot s3__c

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
         <div class="flash">
 
-          <h1 class="title fs65">Accelerate localization from code to delivery</h1>
+          <h1 class="fs65">Accelerate localization from code to delivery</h1>
 
-          <p class="subtitle">
+          <p class="fs25">
             A localization and translation management platform for agile teams. Embrace automation,
             workflow transparency, and fast project delivery.
           </p>
@@ -71,12 +71,12 @@
       </section>
 
     </div>
-<!-------------------------------------------------------------------------->
+    <!-------------------------------------------------------------------------->
     <section class="section2">
 
-      <div class="container">
+      <div class="container1290">
 
-        <h2 class="section2__title">The preferred localization tool of 1500+ companies</h2>
+        <h2 class="title section2__title">The preferred localization tool of 1500+ companies</h2>
 
         <ul class="section2__menu">
           <li class="section2__item"><a href="#"><img src="./images/spe.png" alt="firm1"></a></li>
@@ -90,11 +90,29 @@
       </div>
 
     </section>
-<!-------------------------------------------------------------------------->
-   <section class="section3">
-    <div class="container1290">
+    <!-------------------------------------------------------------------------->
+    <section class="section3">
 
-    </div>
+      <div class="container1290 section3__container">
+
+        <div class="section3__box">
+
+          <h2 class="title mb30">Control the localization process</h2>
+
+          <p class="subtitle mb30">
+            Collaborate with your team in a single workspace. Add and assign <a class="container3__special-link" href="#" target="_blank">tasks</a>, track progress, and enjoy a
+            seamless localization workflow where you know who is doing what and when.
+          </p>
+
+          <a class="section3__link1" href="#">Start now</a>
+
+        </div>
+
+        <div>
+
+          <img src="./images/card1.png" alt="card1">
+
+        </div>
 
 
 
@@ -102,7 +120,19 @@
 
 
 
-   </section>
+
+
+
+
+      </div>
+
+
+
+
+
+
+
+    </section>
 
 
 
