--- a/index.html
+++ b/index.html
@@ -93,47 +93,117 @@
     <!-------------------------------------------------------------------------->
     <section class="section3">
 
-      <div class="container1290 section3__container">
+      <div class="container1290">
+        <!--============================================================-->
+        <article class="section3__article">
 
-        <div class="section3__box">
+          <div class="section3__box1">
 
-          <h2 class="title mb30">Control the localization process</h2>
+            <h2 class="title mb30">Control the localization process</h2>
 
-          <p class="subtitle mb30">
-            Collaborate with your team in a single workspace. Add and assign <a class="container3__special-link" href="#" target="_blank">tasks</a>, track progress, and enjoy a
-            seamless localization workflow where you know who is doing what and when.
-          </p>
+            <p class="subtitle mb30">
+              Collaborate with your team in a single workspace. Add and assign <a class="container3__special-link"
+                href="#" target="_blank">tasks</a>, track progress, and enjoy a
+              seamless localization workflow where you know who is doing what and when.
+            </p>
 
-          <a class="section3__link1" href="#">Start now</a>
+            <a class="section3__link1" href="#">Start now</a>
 
-        </div>
+          </div>
 
-        <div>
+          <div>
 
-          <img src="./images/card1.png" alt="card1">
+            <img src="./images/card1.png" alt="card1">
 
-        </div>
+          </div>
 
+        </article>
+        <!--============================================================-->
+        <article class="section3__article section3__article2">
 
+          <div class="section3__box2">
 
+            <h2 class="title mb30">Shorten time<br> to market</h2>
 
+            <p class="subtitle mb30">
+              Localize your product in parallel with the development cycle. Use the <a class="container3__special-link"
+                target="_blank">Adobe XD</a>, <a class="container3__special-link" target="_blank">Figma</a>, and <a
+                class="container3__special-link" target="_blank">Sketch</a> plugins
+              to start working on translations as soon as the product design is ready. No more idle waiting.
+            </p>
 
+            <a class="section3__link1" href="#">Start now</a>
 
+          </div>
 
+          <div>
 
+            <img src="./images/card2.png" alt="card2">
 
+          </div>
 
+        </article>
+        <!--============================================================-->
+        <article class="section3__article">
+
+          <div class="section3__box3">
+
+            <h2 class="title mb30">Ensure quality</h2>
+
+            <p class="subtitle mb30">
+              Use built-in tools — e.g. <a class="container3__special-link" target="_blank">translation memory,</a>
+              machine translation, and <a class="container3__special-link" target="_blank">QA checks</a> — to enhance
+              the quality and cohesion of translations. Add product <a class="container3__special-link"
+                target="_blank">screenshots</a> for context and use the <a class="container3__special-link"
+                target="_blank">in-context editors</a> for
+              instant previews.
+            </p>
+
+            <a class="section3__link1" href="#">Start now</a>
+
+          </div>
+
+          <div>
+
+            <img src="./images/card3.png" alt="card3">
+
+          </div>
+
+        </article>
+        <!--============================================================-->
+        <article id="mb150" class="section3__article section3__article2">
+
+          <div class="section3__box4">
+
+            <h2 class="title mb30">Less work for developers</h2>
+
+            <p class="subtitle mb30">
+              Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the
+              powerful <a class="container3__special-link" target="_blank">API</a>, <a class="container3__special-link"
+                target="_blank">CLI</a>, <a class="container3__special-link" target="_blank">mobile SDKs</a>, and
+              integrations with <a class="container3__special-link" target="_blank">GitHub</a>, <a
+                class="container3__special-link" target="_blank">Bitbucket</a>, <a class="container3__special-link"
+                target="_blank">JIRA</a>, and more.
+            </p>
+
+            <a class="section3__link1" href="#">Start now</a>
+
+          </div>
+
+          <div class="box__card4">
+
+            <img src="./images/card4.png" alt="card4">
+
+            <img class="tablet" src="./images/card4_1.png">
+
+          </div>
+
+        </article>
 
       </div>
 
-
-
-
-
-
-
     </section>
-
+    <!-------------------------------------------------------------------------->
 
 
 
