--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-------------------------------------------------------------------------->
     <section class="section2">
 
-      <div class="container1290">
+      <div class="container">
 
         <h2 class="title section2__title">The preferred localization tool of 1500+ companies</h2>
 
@@ -93,7 +93,7 @@
     <!-------------------------------------------------------------------------->
     <section class="section3">
 
-      <div class="container1290">
+      <div class="container">
         <!--============================================================-->
         <article class="section3__article">
 
@@ -113,7 +113,7 @@
 
           <div>
 
-            <img src="./images/card1.png" alt="card1">
+            <img src="./images/card1.png" alt="card1" width="632">
 
           </div>
 
@@ -138,7 +138,7 @@
 
           <div>
 
-            <img src="./images/card2.png" alt="card2">
+            <img src="./images/card2.png" alt="card2" width="632">
 
           </div>
 
@@ -165,7 +165,7 @@
 
           <div>
 
-            <img src="./images/card3.png" alt="card3">
+            <img src="./images/card3.png" alt="card3" width="632">
 
           </div>
 
@@ -192,7 +192,7 @@
 
           <div class="box__card4">
 
-            <img src="./images/card4.png" alt="card4">
+            <img src="./images/card4.png" alt="card4" width="632">
 
             <img class="tablet" src="./images/card4_1.png">
 
@@ -204,6 +204,34 @@
 
     </section>
     <!-------------------------------------------------------------------------->
+    <section class="section4А">
+
+      <div class="container">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      </div>
+
+
+
+
+
+
+
+
+
+    </section>
 
 
 
