--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!--------------------------------------------------------------------->
   <main>
 
-    <div class="container">
+    <div class="container1330">
 
       <section class="section1">
 
@@ -204,32 +204,83 @@
 
     </section>
     <!-------------------------------------------------------------------------->
-    <section class="section4А">
+    <section class="section4">
 
       <div class="container">
 
+        <article class="section4-art">
 
+          <h2 class="title section4__title">What can you localize with Lokalise?</h2>
 
+          <ul class="section4__menu">
+            <!--============================================================-->
+            <li class="section4__menu-item">
+              <a href="#" target="_blank">
+                <img class="section4__menu-img" src="./images/section4/web.svg" alt="link1">
+                <h3 class="section4__menu-title">Web apps</h3>
+                <p class="section4__menu-subtitle">
+                  Any kind of web apps — backend, frontend, single page, blogs — you name it.
+                </p>
+              </a>
+            </li>
+            <!--============================================================-->
+            <li class="section4__menu-item">
+              <a href="#" target="_blank">
+                <img class="section4__menu-img" src="./images/section4/mobile.svg" alt="link1">
+                <h3 class="section4__menu-title">Mobile apps</h3>
+                <p class="section4__menu-subtitle">
+                  Upload any mobile platform language files. Embed iOS SDK or Lokalise Android SDK if you
+                  prefer.
+                </p>
+              </a>
+            </li>
+            <!--============================================================-->
+            <li class="section4__menu-item">
+              <a href="#" target="_blank">
+                <img class="section4__menu-img" src="./images/section4/games.svg" alt="link1">
+                <h3 class="section4__menu-title">Web apps</h3>
+                <p class="section4__menu-subtitle">
+                  Our cloud software is trusted by many leading game developers around the world.
+                </p>
+              </a>
+            </li>
+            <!--============================================================-->
+            <li class="section4__menu-item">
+              <a href="#" target="_blank">
+                <img class="section4__menu-img" src="./images/section4/docs.svg" alt="link1">
+                <h3 class="section4__menu-title">Web apps</h3>
+                <p class="section4__menu-subtitle">
+                  Upload your DOCX and static HTML files.
+                </p>
+              </a>
+            </li>
+            <!--============================================================-->
+            <li class="section4__menu-item">
+              <a href="#" target="_blank">
+                <img class="section4__menu-img" src="./images/section4/mem.svg" alt="link1">
+                <h3 class="section4__menu-title">Web apps</h3>
+                <p class="section4__menu-subtitle">
+                  Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.
+                </p>
+              </a>
+            </li>
+            <!--============================================================-->
+            <li class="section4__menu-item">
+              <a href="#" target="_blank">
+                <img class="section4__menu-img" src="./images/section4/iot.svg" alt="link1">
+                <h3 class="section4__menu-title">Web apps</h3>
+                <p class="section4__menu-subtitle">
+                  We support most popular localization file formats.
+                </p>
+              </a>
+            </li>
+            <!--============================================================-->
 
+          </ul>
 
-
-
-
-
-
-
-
-
+        </article>
 
       </div>
-
-
-
-
-
-
-
-
 
     </section>
 
