--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
 
     </section>
-    <!-------------------------------------------------------------------------->
+    <!---------------------------------<SECTION 4>----------------------------------->
     <section class="section4">
 
       <div class="container">
@@ -283,6 +283,59 @@
       </div>
 
     </section>
+    <!---------------------------------</SECTION 4>----------------------------------->
+    <!---------------------------------<SECTION 5>----------------------------------->
+    <article class="section5">
+
+      <div class="container">
+
+        <h2 class="title">Boost your localization team’s productivity tenfold</h2>
+
+        <ul class="section5__menu ul">
+          <!--============================================================-->
+          <li class="section5__menu-item">
+            <img src="./images/section5/managers.png" alt="icon1">
+            <h3 class="section5__menu-title  s5s1">Managers</h3>
+            <p class="subtitle">
+              Update existing and launch new features and products while simultaneously localizing them in multiple
+              languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other
+              markets.
+            </p>
+            <a class="section5__menu-link" href="#" target="_blank">Learn more</a>
+          </li>
+          <!--============================================================-->
+          <li class="section5__menu-item">
+            <img src="./images/section5/developers.png" alt="icon2">
+            <h3 class="section5__menu-title  s5s2">Developers</h3>
+            <p class="subtitle">
+              Set up an integration with your code repository or your own custom SDK via Lokalise's <a
+                class="container3__special-link" target="_blank">powerful API</a>. Do
+              that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for
+              translation.
+            </p>
+            <a class="section5__menu-link" href="#" target="_blank">Learn more</a>
+          </li>
+          <!--============================================================-->
+          <li class="section5__menu-item">
+            <img src="./images/section5/translators.png" alt="icon3">
+            <h3 class="section5__menu-title  s5s3">Translators</h3>
+            <p class="subtitle">
+              Eliminate double-work and neverending revisions with visual context (screenshots) and live previews.
+              Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline
+              machine translation, and translation memory.
+            </p>
+            <a class="section5__menu-link" href="#" target="_blank">Learn more</a>
+          </li>
+          <!--============================================================-->
+        </ul>
+
+      </div>
+
+    </article>
+    <!---------------------------------</SECTION 5>----------------------------------->
+
+
+
 
 
 
