--- a/index.html
+++ b/index.html
@@ -333,6 +333,40 @@
 
     </article>
     <!---------------------------------</SECTION 5>----------------------------------->
+    <!---------------------------------<SECTION 6>----------------------------------->
+    <section class="section6">
+
+      <div class="container">
+
+        <article class="section6__article">
+
+          <div class="section6__block-left">
+
+            <blockquote class="quote">
+              “Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX,
+              powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air
+              updates
+              are the icing on the cake.”
+            </blockquote>
+
+            <img class="section6__img" src="./images/Edward Cooper, Chief Mobile Officer.png" alt="Edward Cooper, Chief Mobile Officer">
+
+            <img class="section6__img" src="./images/revolut.png" alt="revolut">
+
+          </div>
+
+          <div class="section6__block-right">
+
+            <img class="section6__img" src="./images/person.png" alt="image">
+
+          </div>
+
+        </article>
+
+      </div>
+
+    </section>
+
 
 
 
