--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
               are the icing on the cake.”
             </blockquote>
 
-            <img class="section6__img" src="./images/Edward Cooper, Chief Mobile Officer.png" alt="Edward Cooper, Chief Mobile Officer">
+            <img class="section6__img" src="./images/Edward Cooper, Chief Mobile Officer.png"
+              alt="Edward Cooper, Chief Mobile Officer">
 
             <img class="section6__img" src="./images/revolut.png" alt="revolut">
 
@@ -366,6 +367,39 @@
       </div>
 
     </section>
+    <!---------------------------------</SECTION 6>----------------------------------->
+    <!---------------------------------<SECTION 7>----------------------------------->
+    <section class="section7">
+
+      <div class="container">
+
+        <article class="section7__article">
+
+          <div class="section7__block-left">
+
+            <img src="./images/section7/cake.svg" alt="icon">
+
+            <h3 class="section7__title">The most-loved translation management software</h3>
+
+          </div>
+
+          <div class="section7__block-right">
+
+            <img src="./images/section7/g2.svg" alt="icon1">
+
+            <img src="./images/section7/capterra.svg" alt="icon2">
+
+          </div>
+
+        </article>
+
+      </div>
+
+    </section>
+    <!---------------------------------</SECTION 7>----------------------------------->
+    <!---------------------------------<SECTION 8>----------------------------------->
+
+
 
 
 
