--- a/index.html
+++ b/index.html
@@ -398,6 +398,28 @@
     </section>
     <!---------------------------------</SECTION 7>----------------------------------->
     <!---------------------------------<SECTION 8>----------------------------------->
+    <section class="section8">
+
+      <div class="container2">
+
+        <article class="section8__article1">
+
+          <h2 class="section8__title">Integrate Lokalise with your work tools</h2>
+
+          <p class="section8__subtitle">Automate processes, eliminate routine tasks, and track progress with ease.</p>
+
+          <img class="section8__art1-img" src="./images/pic1023.png" alt="picture" width="1023">
+
+          <button class="section8__art1-btn btn btn-type2" type="button">See all integrations</button>
+
+        </article>
+
+      </div>
+
+    </section>
+    <!---------------------------------</SECTION 8>----------------------------------->
+    <!---------------------------------<SECTION 9>----------------------------------->
+
 
 
 
