--- a/index.html
+++ b/index.html
@@ -419,6 +419,26 @@
     </section>
     <!---------------------------------</SECTION 8>----------------------------------->
     <!---------------------------------<SECTION 9>----------------------------------->
+    <section class="section9">
+
+      <div class="container2">
+
+        <article class="section9__article1">
+
+          <h2 class="section9__title">Localization made easy. Why wait?</h2>
+
+          <p class="section9__subtitle">Try for free or let us show you how it works.</p>
+
+          <button class="section8__art2-btn btn btn-type3" type="button">Try it free</button>
+
+        </article>
+
+      </div>
+
+    </section>
+    <!---------------------------------</SECTION 9>----------------------------------->
+    <!---------------------------------<SECTION 10>----------------------------------->
+
 
 
 
