--- a/index.html
+++ b/index.html
@@ -438,28 +438,88 @@
     </section>
     <!---------------------------------</SECTION 9>----------------------------------->
     <!---------------------------------<SECTION 10>----------------------------------->
+    <section class="section10">
 
+      <div class="container flex">
 
+        <div class="section10__left">
 
+          <h3 class="section10__title">Case Studies</h3>
 
+          <img src="./images/bikes.png" alt="picture of bikes">
 
+          <img class="section10__img2" src="./images/spe.png" alt="logo1">
 
+          <p class="section10__subtitle">
+            Riding towards global success with a 100% teammate enthusiasm
+          </p>
 
+          <a class="section10__link" href="#">Read more</a>
 
+        </div>
+        <!---------------------------------------------------->
+        <div class="section10__right">
 
+          <ul class="section10__right-menu ul">
+            <li class="section10__right__menu-item">
+              <h3 class="section10__right__menu-h3">Product</h3>
+            </li>
+            <li class="section10__right__menu-item"><a href="#">For developers</a></li>
+            <li class="section10__right__menu-item"><a href="#">For managers</a></li>
+            <li class="section10__right__menu-item"><a href="#">For translators</a></li>
+            <li class="section10__right__menu-item"><a href="#">For designers</a></li>
+            <li class="section10__right__menu-item"><a href="#">Integrations</a></li>
+            <li class="section10__right__menu-item"><a href="#">Security</a></li>
+            <li class="section10__right__menu-item"><a href="#">Pricing</a></li>
+            <li class="section10__right__menu-item"><a href="#">Automations</a></li>
+          </ul>
 
+          <ul class="section10__right-menu ul">
+            <li class="section10__right__menu-item">
+              <h3 class="section10__right__menu-h3">Support</h3>
+            </li>
+            <li class="section10__right__menu-item"><a href="#">Contact</a></li>
+            <li class="section10__right__menu-item"><a href="#">Documentation</a></li>
+            <li class="section10__right__menu-item"><a href="#">Status</a></li>
+            <li class="section10__right__menu-item"><a href="#">Product Updates</a></li>
+            <li class="section10__right__menu-item"><a href="#">CLI Tool</a></li>
+            <li class="section10__right__menu-item"><a href="#">API Reference</a></li>
+            <li class="section10__right__menu-item"><a href="#">iOS and Android SDK</a></li>
+            <li class="section10__right__menu-item"><a href="#">Supported File Formats</a></li>
+          </ul>
 
+          <ul class="section10__right-menu ul">
+            <li class="section10__right__menu-item">
+              <h3 class="section10__right__menu-h3">Company</h3>
+            </li>
+            <li class="section10__right__menu-item"><a href="#">About</a></li>
+            <li class="section10__right__menu-item"><a href="#">Blog</a></li>
+            <li class="section10__right__menu-item"><a href="#">Careers | We`re Hiring</a></li>
+            <li class="section10__right__menu-item"><a href="#">Case Studies</a></li>
+            <li class="section10__right__menu-item"><a href="#">Media Kit</a></li>
+          </ul>
 
+          <ul class="section10__right-menu ul">
+            <li class="section10__right__menu-item">
+              <h3 class="section10__right__menu-h3">Legal</h3>
+            </li>
+            <li class="section10__right__menu-item"><a href="#">Terms of Service</a></li>
+            <li class="section10__right__menu-item"><a href="#">Privacy Policy</a></li>
+            <li class="section10__right__menu-item"><a href="#">Cookie Policy</a></li>
+            <li class="section10__right__menu-item"><a href="#">Privacy Shield</a></li>
+            <li class="section10__right__menu-item"><a href="#">DPA</a></li>
+            <li class="section10__right__menu-item"><a href="#">List of Sub-processors</a></li>
+            <li class="section10__right__menu-item"><a href="#">Candidates Privacy Notice</a></li>
+          </ul>
 
+        </div>
 
+      </div>
 
-
-
-
-
-
+    </section>
+    <!---------------------------------</SECTION 10>----------------------------------->
   </main>
-
+  <!---------------------------------<FOOTER>------------------------------------------->
   <footer>
 
   </footer>
