ready on version 3.0 waiting for global fixing

--- a/index.html
+++ b/index.html
@@ -522,6 +522,27 @@
   <!---------------------------------<FOOTER>------------------------------------------->
   <footer>
 
+    <div class="container footer">
+
+      <div class="footer__left">
+
+        <img class="footer__img" src="./images/logo_simple.png" alt="logotype">
+
+        <p class="footer__sub footer__left-sub">Localization workflow for your web and mobile apps, games and digital
+          content.</p>
+
+      </div>
+
+      <div class="footer__right">
+
+        <p class="footer__sub">©2001-2020</p>
+
+        <p class="footer__sub">All rights reserved.</p>
+
+      </div>
+
+    </div>
+
   </footer>
 
 </body>
