--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/common.css">
   <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/mobile.css">
 </head>
 
 <body>
 
   <header class="header">
 
-    <div class="container head">
+    <div class="container1330 head">
 
       <div class="header__bar">
 
-        <img class="logo" src="images/Frame (4).png" alt="logo" height="28">
+          <a class="logo_link" href="index.html">
+            <img class="logo" src="images/Frame (4).png" alt="logo" height="28">
+          </a>
 
         <ul class="header__menu">
           <li class="header__menu-item"><a href="#" alt="Product">Product</a></li>
@@ -47,7 +50,7 @@
   <!--------------------------------------------------------------------->
   <main>
 
-    <div class="container1330">
+    <div class="container">
 
       <section class="section1">
 
@@ -79,12 +82,12 @@
         <h2 class="title section2__title">The preferred localization tool of 1500+ companies</h2>
 
         <ul class="section2__menu">
-          <li class="section2__item"><a href="#"><img src="./images/spe.png" alt="firm1"></a></li>
-          <li class="section2__item"><a href="#"><img src="./images/virgin.png" alt="firm2"></a></li>
-          <li class="section2__item"><a href="#"><img src="./images/tidal.png" alt="firm3"></a></li>
-          <li class="section2__item"><a href="#"><img src="./images/revolut.png" alt="firm4"></a></li>
-          <li class="section2__item"><a href="#"><img src="./images/yelp.png" alt="firm5"></a></li>
-          <li class="section2__item"><a href="#"><img src="./images/daimer.png" alt="firm6"></a></li>
+          <li><a href="#"><img src="./images/spe.png" alt="firm1"></a></li>
+          <li><a href="#"><img src="./images/virgin.png" alt="firm2"></a></li>
+          <li><a href="#"><img src="./images/tidal.png" alt="firm3"></a></li>
+          <li><a href="#"><img src="./images/revolut.png" alt="firm4"></a></li>
+          <li><a href="#"><img src="./images/yelp.png" alt="firm5"></a></li>
+          <li><a href="#"><img src="./images/daimer.png" alt="firm6"></a></li>
         </ul>
 
       </div>
